--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -98,7 +98,7 @@ acronym {
     border:0;
     font-variant:normal;
 }
-/* to preserve line-height and selector appearance */
+/* to preserve line-height and selector appearance */s
 sup {
     vertical-align:text-top;
 }
