--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,4 +1,61 @@
-%div.flash-box
-  %div.notice グループを作成しました
-  
+%body
+  .flash-box
+    .notice グループを作成しました
+
+  .wrapper
+    .chat-side
+      .side-header
+        .side-header__box
+          %p.side-header__box__user-name ユーザー名
+          %ul.side-header__box__menu
+            %li.side-header__box__menu__new-group
+            =link_to "/groups/new", class: "side-header__box__menu__new-group" do
+              = fa_icon 'edit'
+            %li.side-header__box__menu__edit-group
+            =link_to "/users/1111/edit", class: "side-header__box__menu__edit-user" do
+              = fa_icon 'cog'
+      .groups
+        %a( href='http://google.co.jp')
+          %div.group
+            %p.group-group-name 野球
+            %p.group__latest-message 甲子園で高校野球！
+        %a( href='http://google.co.jp')
+          %div.group
+            %p.group-group-name 料理
+            %p.group__latest-message もやし焼きそばにハマってる！
+        %a( href='http://google.co.jp')
+          %div.group
+            %p.group-group-name 音楽
+            %p.group__latest-message スピッツ好き！
+
+    .chat-main
+      .main-header
+        .main-header__left-box
+          %h2.main-header__left-box__current-group グループ名 
+          %ul.main-header__left-box__member-list
+            Member : 
+            %li.main-header__left-box__member-list__member ユーザ名１
+        %a( href='http://google.co.jp')
+          %div.main-header__edit-btn Edit
+
+      .messages
+        .message
+          .message__upper-info
+            %p.message__upper-info__talker ユーザ名A
+            %p.message__upper-info__date 2019/8/17(sat) 11:57:21
+          %p.message__text いいね！ 
+        %div.message
+          %div.message__upper-info
+            %p.message__upper-info__talker ユーザ名B
+            %p.message__upper-info__date 2019/8/17(sat) 11:58:21
+          %p.message__text 頑張ろう！ 
+      
+      .form
+        %form#new_message.new_message{"accept-charset" => "UTF-8", :action => "/groups/363/messages", :enctype => "multipart/form-data", :method => "post"}
+          .input-box
+            %input#message_content.input-box__text{:name => "message[content]", :placeholder => "type a message", :type => "text"}/
+            %label.input-box__image{:for => "message_image"}
+              %i.fa.fa-image
+              %input#message_image.input-box__image__file{:name => "message[image]", :type => "file"}/
+          %input.submit-btn{"data-disable-with" => "Send", :name => "commit", :type => "submit", :value => "Send"}/
 
