--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -1,3 +1,7 @@
-// a{
-//  text-decoration:none
-//  }
+* {
+    box-sizing: border-box;
+  }
+  
+  *::-webkit-scrollbar {
+    display: none;
+  }
