--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -1,5 +1,9 @@
+@mixin hen($color: white) {
+  color: $color;
+}
+
 .flash-box{
-  color: white;
+  @include hen();
   font-size: 1rem;
   font-weight: lighter;
   text-align: center;
@@ -13,7 +17,7 @@
 }
   .chat-side{
     width: 300px;
-    color: white;
+    @include hen();
     float: left;
   
     .side-header{
@@ -34,14 +38,13 @@
           display: flex;
           }
           .side-header__box__menu__new-group{
-            color: white;
+            @include hen();
             margin-left: 0.3rem;
           }
           .side-header__box__menu__edit-user{
-            color: white;
+            @include hen();
             margin-left: 0.3rem;
-          }
-    
+        }
 
     .groups{
       height: calc(100vh - 100px);
@@ -50,7 +53,7 @@
       overflow: scroll;
       }
       .group{
-        color: white;
+        @include hen();
         margin-bottom: 40px;
         }
         .group__group-name{
@@ -87,10 +90,7 @@
           font-size: 12px;
           color: #999999;
         }
-          .main-header__left-box__member-list__member{
-           display: flex;
-           font-size: 12px;
-           color: #999999;
+          &.main-header__left-box__member-list__member{
           }
       
       .main-header__edit-btn{
@@ -124,7 +124,6 @@
             font-size: 12px;
             margin-left: 10px;
           }
-          
     .form{
       height: 90px;
       padding: 20px 40px;
@@ -169,7 +168,7 @@
         padding: 0 30px;
         margin-left: 15px;
         background-color: #38aef0;
-        color: white;
+        @include hen();
         cursor: pointer;
         }
   }
