--- a/app/views/messages/_chat-main.html.haml
+++ b/app/views/messages/_chat-main.html.haml
@@ -1,8 +1,8 @@
-.main-header
-	.main-header__left-box
-		%h2.main-header__left-box__current-group グループ名 
-		%ul.main-header__left-box__member-list
-			Member : 
-			%li.main-header__left-box__member-list__member ユーザ名１
-	%a( href='http://google.co.jp')
-		.main-header__edit-btn Edit
+-# .main-header
+-# 	.main-header__left-box
+-# 		%h2.main-header__left-box__current-group グループ名 
+-# 		%ul.main-header__left-box__member-list
+-# 			Member : 
+-# 			%li.main-header__left-box__member-list__member ユーザ名１
+-# 	%a( href='http://google.co.jp')
+-# 		.main-header__edit-btn Edit
