--- a/app/views/messages/_groups.html.haml
+++ b/app/views/messages/_groups.html.haml
@@ -1,12 +1,12 @@
-%a( href='http://google.co.jp')
-	%div.group
-		%p.group-group-name 野球
-		%p.group__latest-message 甲子園で高校野球！
-%a( href='http://google.co.jp')
-	%div.group
-		%p.group-group-name 料理
-		%p.group__latest-message もやし焼きそばにハマってる！
-%a( href='http://google.co.jp')
-	%div.group
-		%p.group-group-name 音楽
-		%p.group__latest-message スピッツ好き！
+-# %a( href='http://google.co.jp')
+-# 	%div.group
+-# 		%p.group-group-name 野球
+-# 		%p.group__latest-message 甲子園で高校野球！
+-# %a( href='http://google.co.jp')
+-# 	%div.group
+-# 		%p.group-group-name 料理
+-# 		%p.group__latest-message もやし焼きそばにハマってる！
+-# %a( href='http://google.co.jp')
+-# 	%div.group
+-# 		%p.group-group-name 音楽
+-# 		%p.group__latest-message スピッツ好き！
