--- a/app/views/messages/_side-header.html.haml
+++ b/app/views/messages/_side-header.html.haml
@@ -1,9 +1,9 @@
-.side-header__box
-  %p.side-header__box__user-name ユーザー名
-  %ul.side-header__box__menu
-    %li.side-header__box__menu__new-group
-    =link_to "/groups/new", class: "side-header__box__menu__new-group" do
-      = fa_icon 'edit'
-    %li.side-header__box__menu__edit-group
-    =link_to "/users/1111/edit", class: "side-header__box__menu__edit-user" do
-      = fa_icon 'cog'
+-# .side-header__box
+-#   %p.side-header__box__user-name ユーザー名
+-#   %ul.side-header__box__menu
+-#     %li.side-header__box__menu__new-group
+-#     =link_to "/groups/new", class: "side-header__box__menu__new-group" do
+-#       = fa_icon 'edit'
+-#     %li.side-header__box__menu__edit-group
+-#     =link_to "/users/1111/edit", class: "side-header__box__menu__edit-user" do
+-#       = fa_icon 'cog'
