--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,19 +1,19 @@
-%body
-  .flash-box
-    .notice グループを作成しました
+-# %body
+-#   .flash-box
+-#     .notice グループを作成しました
 
-  .wrapper
-    .chat-side
-      .side-header
-        = render "side-header"
-      .groups
-        = render "groups" 
+-#   .wrapper
+-#     .chat-side
+-#       .side-header
+-#         = render "side-header"
+-#       .groups
+-#         = render "groups" 
 
-    .chat-main
-      = render "chat-main"
+-#     .chat-main
+-#       = render "chat-main"
 
-      .messages
-        =render "messages"
+-#       .messages
+-#         =render "messages"
       
-      .form
-        =render "form"
+-#       .form
+-#         =render "form"
