--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,15 @@
 @import "./reset";
 @import "font-awesome";
 @import "variable";
+@import "config/colors";
+@import "modules/flash";
+
+
+// @import "config/size";
+// @import "config/reset";
+// @import "mixins/mixin";
+// @import "mixins/vendor_prefix";
+// @import "modules/side_bar";
+// @import "modules/chat";
 @import "modules/user";
-@import "messages";
+@import "messages.scss"
