--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -12,8 +12,19 @@
     .chat-main
       = render "chat-main"
 
+      -# .messages
+      -#   =render "messages"
+      
       .messages
-        =render "messages"
+      = render @messages
       
       .form
-        =render "form"
+        = form_for [@group, @message] do |f|
+          = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+          .form__mask
+            = f.label :image, class: 'form__mask__image' do
+              = fa_icon 'picture-o', class: 'icon'
+              = f.file_field :image, class: 'hidden'
+          = f.submit 'Send', class: 'form__submit'
+      
+      
