--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -1,7 +1,7 @@
-%form#new_message.new_message{"accept-charset" => "UTF-8", :action => "/groups/363/messages", :enctype => "multipart/form-data", :method => "post"}
+= form_for [@group, @message] do |f|
 	.input-box
-		%input#message_content.input-box__text{:name => "message[content]", :placeholder => "type a message", :type => "text"}/
-		%label.input-box__image{:for => "message_image"}
-			%i.fa.fa-image
-			%input#message_image.input-box__image__file{:name => "message[image]", :type => "file"}/
-	%input.submit-btn{"data-disable-with" => "Send", :name => "commit", :type => "submit", :value => "Send"}/
+		= f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+		= f.label :image, class: 'input-box__image' do
+			= fa_icon 'picture-o', class: 'fa-image'
+			= f.file_field :image, class: 'input-box__image__file'
+	= f.submit 'Send', class: 'submit-btn'
