--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,8 +1,8 @@
 .message
-  .upper-message
-    .upper-message__user-name
+  .message__upper-info
+    .message__upper-info__talker
       = message.user.name
-    .upper-message__date
+    .message__upper-info__date
       = message.created_at.strftime("%Y/%m/%d %H:%M")
   .lower-message
     - if message.content.present?
