--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,30 +1,9 @@
 %body
-  .flash-box
-    .notice グループを作成しました
-
   .wrapper
-    .chat-side
-      .side-header
-        = render "side-header"
-      .groups
-        = render "groups" 
-
+    = render "shared/side_bar"
     .chat-main
       = render "chat-main"
-
-      -# .messages
-      -#   =render "messages"
-      
       .messages
-      = render @messages
-      
+        = render @messages
       .form
-        = form_for [@group, @message] do |f|
-          = f.text_field :content, class: 'form__message', placeholder: 'type a message'
-          .form__mask
-            = f.label :image, class: 'form__mask__image' do
-              = fa_icon 'picture-o', class: 'icon'
-              = f.file_field :image, class: 'hidden'
-          = f.submit 'Send', class: 'form__submit'
-      
-      
+        = render "form"
