--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -18,6 +18,7 @@
   }
 
 .wrapper{
+  @include flexbox;
 }
   .chat-side{
     width: 300px;
@@ -72,7 +73,6 @@
   .chat-main{
     width: calc(100% - 300px);
     float: left;
-  
     .main-header{
       height: 100px;
       padding: 0 40px;
