JSファイルの作成
フォームにIDを追加　’"new_message"

--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [@group, @message] do |f|
+= form_for [@group, @message], html: {id: 'new_message'} do |f|
 	.input-box
 		= f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
 		= f.label :image, class: 'input-box__image' do
