--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -15,6 +15,7 @@
       &__lists {
         display: inline-block;
         float: right;
+        height:100px;
         .list {
           display: inline-block;
         }
@@ -29,6 +30,8 @@
       background-color: $side_blue_light;
       height: calc(100vh - 100px);
       padding: 0 20px;
+      width:300px;
+      overflow:scroll;
       .group {
         box-sizing: border-box;
         padding: 20px 0 40px;
