--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -1,6 +1,6 @@
 = form_for [@group, @message], html: {id: 'new_message'} do |f|
 	.input-box
-		= f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+		= f.text_field :content, id: 'input', class: 'input-box__text', placeholder: 'type a message'
 		= f.label :image, class: 'input-box__image' do
 			= fa_icon 'picture-o', class: 'fa-image'
 			= f.file_field :image, class: 'input-box__image__file'
