--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -94,8 +94,9 @@
           font-size: 12px;
           color: #999999;
         }
-          &.main-header__left-box__member-list__member{
-          }
+        li{
+          padding: 0px 0px 0px 5px;
+        }  
 
         .main-header a {
           color: #38aef0;
