--- a/app/assets/stylesheets/modules/side_bar.scss
+++ b/app/assets/stylesheets/modules/side_bar.scss
@@ -35,6 +35,7 @@
       .group {
         box-sizing: border-box;
         padding: 20px 0 40px;
+        text-decoration: none;
         &__name {
           color: $white;
           font-size: $side_group_name;
