--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -29,8 +29,8 @@
             = f.hidden_field :group_user, name: 'group[user_ids][]', value: user.id
             %p.chat-group-user__name
               = user.name
-            %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
-              削除
+            -# %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
+            -#   -# 削除
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
